--- a/index.html
+++ b/index.html
@@ -1,3 +1,88 @@
-<h1>Matthew McMullin</h1>
-<hr/>
-<img style="width:100px" src="https://avatars1.githubusercontent.com/u/43027025?s=460&v=4">
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Matthew McMullin</title>
+    </head>
+    <body>
+        <h1>Matthew McMullin</h1>
+        <hr/>
+        <br style="margin-top: 5px;">
+        <img style="width: 150px" src="https://avatars1.githubusercontent.com/u/43027025?s=460&v=4">
+        <p>Test Paragraph Blah Blah</p>
+        <!--List Example-->
+        <h2>About Me</h2>
+        <ul>
+            <li>Studying Computer Innovation Engineering at KMITL</li>
+            <li>Thai American Student</li>
+            <li>ha</li>
+            <li>haha</li>
+            <li>hahaha</li>
+        </ul>
+        <!--Table Example-->
+        <table>
+            <thead>
+                <tr>
+                    <th>Name</th>
+                    <th>Email</th>
+                    <th>Age</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Matthew John McMullin</td>
+                    <td>61011279@kmitl.ac.th</td>
+                    <td>20</td>
+                </tr>
+            </tbody>
+        <br>
+        </table>
+        <!--Forms Example-->
+        <form action="">
+            <div>
+                <label>First Name</label>
+                <input type="text" name="firstName" placeholder="Enter Firstname">
+                <br style="margin-top: 20px;">
+            </div>
+            <div>
+                <label>Last Name</label>
+                <input type="text" name="lastName" placeholder="Enter Lastname">
+                <br style="margin-top: 10px;">
+            </div>
+            <div>
+                <label>Email</label>
+                <input type="email" name="email" placeholder="Enter Email">
+                <br style="margin-top: 10px;">
+            </div>
+            <br>
+            <div>
+                <label>Message</label>
+                <textarea name="message"></textarea>
+                <br style="margin-top: 10px;">
+            </div>
+            <div>
+                <label>Gender</label>
+                <select name="gender">
+                    <option value="male">Male</option>
+                    <option value="female">Female</option>
+                </select>                  
+                <br style="margin-top: 10px;">
+            </div>
+            <br>
+            <div>
+                <label>Age</label>
+                <input type="age" name = "age" value = "0">
+            </div>
+            <br>
+            <div>
+                <label>Age</label>
+                <input type="date" name = "birthday">
+            </div>
+            <br>
+            <input type="submit" name="submit" value="Submit">
+        </form>
+        <br>
+        <button>Click Me Please</button>
+        
+
+    </body>
+</html>
