--- a/index.html
+++ b/index.html
@@ -83,6 +83,12 @@
         <br>
         <button>Click Me Please</button>
         
+        <!--Quotations-->
+        <blockquote>
+            If it doesnt work google it
+            <br>
+            --Someone
+        </blockquote>
 
     </body>
 </html>
