--- a/testpage.html
+++ b/testpage.html
@@ -7,7 +7,10 @@
         <h1>My test Page</h1>
     </head>
     <section>
-        
+        <article>
+            <h3>Blog</h3>
+            <small>Posted by me </small>
+        </article>
     </section>
 </body>
 </html>
