--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <input type="submit" name="submit" value="Submit">
         </form>
         <br>
-        <button>Click Me Please</button>
+        <button onclick="window.location='testpage.html'">Click Me Please</button>
         
         <!--Quotations-->
         <blockquote>
