--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <html>
     <head>
         <title>Matthew McMullin</title>
+        <style>
+            #main-footer{
+                text-align: center;
+            }
+        </style>
     </head>
     <body>
         <h1>Matthew McMullin</h1>
@@ -89,6 +94,8 @@
             <br>
             --Someone
         </blockquote>
-
+        <footer id="main-footer">
+            <p>Copyright &copy; 2017 Matthew McMullin</p>
+        </footer> 
     </body>
 </html>
