--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Matthew McMullin</title>
+        <title>Matthew McMullin 61011279</title>
         <style>
             #main-footer{
                 text-align: center;
