--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         div.sidebar{
             width: 20%;
             background-color: lightgrey;
-            height: 1300px;
+            height: 1400px;
             left: 8px;
             position: absolute;  
             top: 150px;     
@@ -93,16 +93,19 @@
             <br>
             <h2 style="margin-bottom: 8px;">ABOUT ME</h2>
             <hr style="margin-top: 0px;" size="5px" color="black">  
-            <p style="font-size:20px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum maiores dolorem nisi doloribus laborum rem, nostrum modi officia possimus repellat dolor facere mollitia sapiente? Asperiores alias quo magni eum atque.</p>
+            <p style="font-size:20px;">
+                I am a driven student, a Thai national, pursuing my goals to be a computer systems engineer in the future. I am also a US citizen and have spent many summers in the US. I am currently studying Computer Engineering at King Mongkut Institute of Technology Ladkrabung in Thailand. 
+                My goal in applying for this internship is to be able to learn from people who are the best in their fields. I have done many previous internships during various summers in my high school years and my first college year. I am a good team player and a quick learner. I strive at completing my work in a timely and efficient fashion.
+            </p>
             <div>
                 <h2 style="margin-bottom: 8px;">COMPUTING</h2>
                 <hr style="margin-top: 0px;" size="5px" color="black">
                 <ul>
                     <li>Mac OS / IOs</li>
                     <li>Windows</li>
-                    <li>Social Media</li>
-                    <li>Microsoft Office</li>
-                    <li>Adobe Photoshop</li>
+                    <li>Python</li>
+                    <li>C,C++,C#</li>
+                    <li>JavaScript</li>
                 </ul>
             </div>
             <div style="height:100px;"></div>
@@ -115,51 +118,21 @@
         <hr style="margin-top: 0px;" size="5px" color="black">  
         <div class="infoblock">
             <div class="info1">
-                <p><i>18/14-08/17</i></p>
+                <p><i>2018-2022</i></p>
             </div>
             <hr width="20%" size="2px" color="black">
             <div class="info2">
-                <p>Latest/Most Important</p>
+                <p>King Mongkut Institue of Technology Ladkrabang</p>
             </div>
         </div>
         <br>
         <div class="infoblock">
             <div class="info1">
-                <p><i>2011-2014</i></p>
+                <p><i>2013-2018</i></p>
             </div>
             <hr width="20%" size="2px" color="black">
             <div class="info2">
-                <p>University, School-Degree</p>
-            </div>
-        </div>
-        <br>
-        <div class="infoblock">
-            <div class="info1">
-                <p><i>2009-2011</i></p>
-            </div>
-            <hr width="20%" size="2px" color="black">
-            <div class="info2">
-                <p>University, School-Degree</p>
-            </div>
-        </div>
-        <br>
-        <div class="infoblock">
-            <div class="info1">
-                <p><i>2006-2009</i></p>
-            </div>
-            <hr width="20%" size="2px" color="black">
-            <div class="info2">
-                <p>University, School-Degree</p>
-            </div>
-        </div>
-        <br>
-        <div class="infoblock">
-            <div class="info1">
-                <p><i>2004-2006</i></p>
-            </div>
-            <hr width="20%" size="2px" color="black">
-            <div class="info2">
-                <p>University, School-Degree</p>
+                <p>Ekamai Internatinal School</p>
             </div>
         </div>
     </div>
@@ -290,8 +263,7 @@
         </div>
         <div class="column">
             <h2>LANGUAGE</h2>
-            <hr style="margin-top: 0px;" size="5px" color="black"> 
-            
+            <hr style="margin-top: 0px;" size="5px" color="black">            
         </div>
     </div>
 </div>
