--- a/index.html
+++ b/index.html
@@ -49,21 +49,28 @@
             height: 10px;
             margin-left:20px;
             margin-right: 20px;
-            width:150px;
+            width:250px;
         }
         div.info2{
-            width: 500px;
+            width: 1000px;
             height: 10px;
             margin-right: 20px;
+            margin-bottom: 10px;
             float: right;
         }
         div.infoblock{
             display: inline-flex;
-            margin-top: 10px;
+            margin-top: 20px;
             margin-bottom: 15px;
+            margin: 20px;
+            width: auto;
         }
         p{
             margin-top: 0px;
+            margin-bottom: 10px;           
+        }
+        p i{
+            font-size: 18px;
         }
         li{
             margin: 10px;
@@ -120,7 +127,7 @@
             <div class="info1">
                 <p><i>2018-2022</i></p>
             </div>
-            <hr width="20%" size="2px" color="black">
+            <hr width="40%" size="2px" color="black">
             <div class="info2">
                 <p>King Mongkut Institue of Technology Ladkrabang</p>
             </div>
@@ -130,9 +137,9 @@
             <div class="info1">
                 <p><i>2013-2018</i></p>
             </div>
-            <hr width="20%" size="2px" color="black">
+            <hr width="40%" size="2px" color="black">
             <div class="info2">
-                <p>Ekamai Internatinal School</p>
+                <p>Ekamai International School</p>
             </div>
         </div>
     </div>
@@ -142,54 +149,48 @@
         <hr style="margin-top: 0px;" size="5px" color="black"> 
         <div class="infoblock">
             <div class="info1">
-                <p><i>18/14-08/17</i></p>
+                <p><i>AIS Internship(Summer 2020)</i></p>
             </div>
-            <hr width="20%" size="2px" color="black">
+            <hr width="40%" size="2px" color="black">
             <div class="info2">
-                <p><b>JobTitle</b><br>Company Location</p>
+                <p><b>Intern:</b><br>Worked in the DPI team within the NEXT department. We worked on
+                    their new NBIOT Devkit that they released.</p>
             </div>
         </div>
         <br>
         <div class="infoblock">
             <div class="info1">
-                <p><i>18/14-08/17</i></p>
+                <p><i>InterInk Internship</i></p>
             </div>
-            <hr width="20%" size="2px" color="black">
+            <hr width="40%" size="2px" color="black">
             <div class="info2">
-                <p><b>JobTitle</b><br>Company Location</p>
+                <p><b>Intern:</b><br>We worked on Automated Factory lines, using both robots, electrical components
+                , and pneumatics.</p>
             </div>
         </div>
         <br>
         <div class="infoblock">
             <div class="info1">
-                <p><i>18/14-08/17</i></p>
+                <p><i>Index Internship</i></p>
             </div>
-            <hr width="20%" size="2px" color="black">
+            <hr width="40%" size="2px" color="black">
             <div class="info2">
-                <p><b>JobTitle</b><br>Company Location</p>
+                <p><b>Intern:</b><br>Supported Intel Drone Team with IconSiam opening event. Since I am fluent in both Thai and English, I ended up being a conduit between
+                    the European Intel drone team and the Index team.
+                    </p>
             </div>
         </div>
         <br>
         <div class="infoblock">
             <div class="info1">
-                <p><i>18/14-08/17</i></p>
+                <p><i>Alfa-Geotech Internship (Summer of 2016 and 2018)</i></p>
             </div>
-            <hr width="20%" size="2px" color="black">
+            <hr width="40%" size="2px" color="black">
             <div class="info2">
-                <p><b>JobTitle</b><br>Company Location</p>
+                <p><b>Intern:</b><br>Worked on soil samples testing for soil integrity. Collect Data from construction sites.
+                Worked on a project that uses a Concrete-Foam mixture for leveling uneven runways.</p>
             </div>
         </div>
-        <br>
-        <div class="infoblock">
-            <div class="info1">
-                <p><i>18/14-08/17</i></p>
-            </div>
-            <hr width="20%" size="2px" color="black">
-            <div class="info2">
-                <p><b>JobTitle</b><br>Company Location</p>
-            </div>
-        </div>
-        
     </div>
     <br>
     <div>
@@ -197,9 +198,20 @@
         <hr style="margin-top: 0px;" size="5px" color="black"> 
         <div class="infoblock">
             <div class="info1">
+                <p><i>AIS Internship(Summer 2020)</i></p>
+            </div>
+            <hr width="40%" size="2px" color="black">
+            <div class="info2">
+                <p><b>NEXT Department:</b><br>Worked in the DPI team within the NEXT department. We worked on
+                their new NBIOT Devkit that they released.</p>
+            </div>
+        </div>
+        <br>
+        <div class="infoblock">
+            <div class="info1">
                 <p><i>18/14-08/17</i></p>
             </div>
-            <hr width="20%" size="2px" color="black">
+            <hr width="40%" size="2px" color="black">
             <div class="info2">
                 <p><b>Lorem ipsum dolor sit amet consectetur adipisicing elit.</b><br>Company Location</p>
             </div>
@@ -209,7 +221,7 @@
             <div class="info1">
                 <p><i>18/14-08/17</i></p>
             </div>
-            <hr width="20%" size="2px" color="black">
+            <hr width="40%" size="2px" color="black">
             <div class="info2">
                 <p><b>Lorem ipsum dolor sit amet consectetur adipisicing elit.</b><br>Company Location</p>
             </div>
@@ -219,17 +231,7 @@
             <div class="info1">
                 <p><i>18/14-08/17</i></p>
             </div>
-            <hr width="20%" size="2px" color="black">
-            <div class="info2">
-                <p><b>Lorem ipsum dolor sit amet consectetur adipisicing elit.</b><br>Company Location</p>
-            </div>
-        </div>
-        <br>
-        <div class="infoblock">
-            <div class="info1">
-                <p><i>18/14-08/17</i></p>
-            </div>
-            <hr width="20%" size="2px" color="black">
+            <hr width="40%" size="2px" color="black">
             <div class="info2">
                 <p><b>Lorem ipsum dolor sit amet consectetur adipisicing elit.</b><br>Company Location</p>
             </div>
