--- a/index.html
+++ b/index.html
@@ -75,6 +75,26 @@
         li{
             margin: 10px;
         }
+        div.languages{
+            display: inline-flex;
+            width: 87%;
+        }
+        div.languages .line{
+            margin-left: 100px;
+            margin-top: auto;
+            margin-bottom: auto;
+        }
+        div.plus{
+            margin-top: 12px;
+            margin-left: 22px; 
+        }
+        div.slider{
+            background-color: black; 
+            width: 10px; 
+            height: 25px; 
+            margin: auto; 
+            position: absolute;
+        }
     </style>
     
 </head>
@@ -244,28 +264,44 @@
             <hr style="margin-top: 0px;" size="5px" color="black"> 
             <div class="column">
                 <ul>
-                    <li>Lorem</li>
-                    <li>Ipsum</li>
-                    <li>Lorem</li>
-                    <li>Ipsum</li>
-                    <li>Lorem</li>
-                    <li>Ipsum</li>
+                    <li>Adaptability</li>
+                    <li>Teamplayer</li>
+                    <li>Hardworking</li>
+                    <li>Problem-Solving</li>
+                    <li>Critical Thinking</li>
+                    <li>Motivated</li>
                 </ul>
             </div>
             <div class="column">
                 <ul>
-                    <li>Lorem</li>
-                    <li>Ipsum</li>
-                    <li>Lorem</li>
-                    <li>Ipsum</li>
-                    <li>Lorem</li>
-                    <li>Ipsum</li>
+                    <li>Communication</li>
+                    <li>Positivity</li>
+                    <li>Time Management</li>
+                    <li>Independent</li>
                 </ul>
             </div>
         </div>
         <div class="column">
             <h2>LANGUAGE</h2>
-            <hr style="margin-top: 0px;" size="5px" color="black">            
+            <hr style="margin-top: 0px;" size="5px" color="black">      
+            <div class="languages">
+                <div><pre><b style="font-size: 20px;">Thai</b><br>   75%</pre></div>
+                <div  class="line" style="width: 100%;"><hr width="100%" size="5px" color="black"></div>
+                <div  class="plus"><p><b style="font-size:40px;">+</b></p></div>
+                <div class="slider" style="left: 80%;top: 83%"></div>
+            </div>
+            <div class="languages">
+                <div><pre><b style="font-size: 20px;">English</b><br>   85%</pre></div>
+                <div  class="line" style="width: 100%;"><hr width="100%" size="5px" color="black"></div>
+                <div  class="plus"><p><b style="font-size:40px;">+</b></p></div>
+                <div class="slider" style="left: 85%;top: 88.7%;"></div>
+            </div>
+            <div class="languages">
+                <div><pre><b style="font-size: 20px;">Chinese</b><br>   3%</pre></div>
+                <div  class="line" style="width: 100%;"><hr width="100%" size="5px" color="black"></div>
+                <div  class="plus"><p><b style="font-size:40px;">+</b></p></div>
+                <div class="slider" style="left: 63%;top: 94.5%;"></div>
+            </div>
         </div>
     </div>
 </div>
