--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
       <div class="row">
         <div class="col" style="padding: 0px;">
           <div class="form-group col-lg-12 mx-auto">
-            <a href="#" class="btn btn-primary btn-block py-2 btn-facebook">
+            <a href="https://www.facebook.com" class="btn btn-primary btn-block py-2 btn-facebook">
                 <i class="fa fa-facebook-f mr-2"></i>
                 <span class="font-weight-bold">Continue with Facebook</span>
             </a>
