--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                 <i class="fa fa-facebook-f mr-2"></i>
                 <span class="font-weight-bold">Continue with Facebook</span>
             </a>
-            <a href="#" class="btn btn-primary btn-block py-2 btn-twitter">
+            <a href="https://twitter.com/" class="btn btn-primary btn-block py-2 btn-twitter">
                 <i class="fa fa-twitter mr-2"></i>
                 <span class="font-weight-bold">Continue with Twitter</span>
             </a>
