--- a/index.html
+++ b/index.html
@@ -151,7 +151,9 @@
         </div>
         <div class="row">
           <div class="col">
-            <button type="button" class="btn btn-primary btn-lg btn-block">Create Your Account </button>
+            <a href="/created.html" class="btn btn-primary btn-block py-2">
+              <span class="font-weight-bold">Create your Account</span>
+            </a>
           </div>
         </div>
         <div class="row">
@@ -181,7 +183,7 @@
       <div class="row">
         <div class="col">
           <div class="text-center w-100">
-            <p class="text-muted font-weight-bold">Already Registered? <a href="#" class="text-primary ml-2">Login</a></p>
+            <p class="text-muted font-weight-bold">Already Registered? <a href="/login.html" class="text-primary ml-2">Login</a></p>
         </div>
         </div>
       </div>
