--- a/quiz.html
+++ b/quiz.html
@@ -47,6 +47,7 @@
         ans = x1+x2;
         document.getElementById("question").innerText = `What is the answer of ${x1} + ${x2}?`;
         document.getElementById('textInput').value = '';
+        document.getElementById('result').innerText = '';
     }
 </script>
 </body>
